# lddtree-issue

./: CMakeLists.txt  README.md
src/: liba.cpp  libb.cpp  main.cpp
